--- a/1_preparation/reading_datasets.ipynb
+++ b/1_preparation/reading_datasets.ipynb
@@ -2,56 +2,211 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with '/bin/python3' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#reading datasets from csv files\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import os\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "%matplotlib inline\n",
     "\n",
     "#reading datasets from \n",
     "# \"0_datasets/IHME_GBD_2019_HAQ_1990_2019_DATA_Y2022M012D21.CSV\" and\n",
     "# \"0_datasets/IHME_HEALTH_SPENDING_1995_2019_Y2023M01D24.CSV\"\n",
-    "HAQ = pd.read_csv(\"0_datasets/IHME_GBD_2019_HAQ_1990_2019_DATA_Y2022M012D21.CSV\")\n",
-    "HS = pd.read_csv(\"0_datasets/IHME_HEALTH_SPENDING_1995_2019_Y2023M01D24.CSV\")"
+    "HAQ = pd.read_csv(\"../0_datasets/IHME_GBD_2019_HAQ_1990_2019_DATA_Y2022M012D21.CSV\")\n",
+    "HS = pd.read_csv(\"../0_datasets/IHME_HEALTH_SPENDING_1995_2019_Y2023M01D24.CSV\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location_id</th>\n",
+       "      <th>location_name</th>\n",
+       "      <th>year_id</th>\n",
+       "      <th>age_group_id</th>\n",
+       "      <th>age_group_name</th>\n",
+       "      <th>haq_index_age_type</th>\n",
+       "      <th>indicator_id</th>\n",
+       "      <th>indicator_name</th>\n",
+       "      <th>measure</th>\n",
+       "      <th>val</th>\n",
+       "      <th>upper</th>\n",
+       "      <th>lower</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>China</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Age-standardized</td>\n",
+       "      <td>Overall</td>\n",
+       "      <td>100</td>\n",
+       "      <td>HAQ Index</td>\n",
+       "      <td>Index</td>\n",
+       "      <td>35.033943</td>\n",
+       "      <td>38.778109</td>\n",
+       "      <td>31.591303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6</td>\n",
+       "      <td>China</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Age-standardized</td>\n",
+       "      <td>Overall</td>\n",
+       "      <td>297</td>\n",
+       "      <td>Tuberculosis</td>\n",
+       "      <td>Mortality-to-incidence ratios (MIR)</td>\n",
+       "      <td>0.151080</td>\n",
+       "      <td>0.179177</td>\n",
+       "      <td>0.126658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>China</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Age-standardized</td>\n",
+       "      <td>Overall</td>\n",
+       "      <td>302</td>\n",
+       "      <td>Diarrheal diseases</td>\n",
+       "      <td>Mortality-to-incidence ratios (MIR)</td>\n",
+       "      <td>0.000377</td>\n",
+       "      <td>0.000491</td>\n",
+       "      <td>0.000291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>China</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Age-standardized</td>\n",
+       "      <td>Overall</td>\n",
+       "      <td>322</td>\n",
+       "      <td>Lower respiratory infections</td>\n",
+       "      <td>Risk-standardised death rates (RSD)</td>\n",
+       "      <td>0.000904</td>\n",
+       "      <td>0.001042</td>\n",
+       "      <td>0.000768</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>China</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Age-standardized</td>\n",
+       "      <td>Overall</td>\n",
+       "      <td>328</td>\n",
+       "      <td>Upper respiratory infections</td>\n",
+       "      <td>Risk-standardised death rates (RSD)</td>\n",
+       "      <td>0.000019</td>\n",
+       "      <td>0.000032</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   location_id location_name  year_id  age_group_id    age_group_name  \\\n",
+       "0            6         China     1990            27  Age-standardized   \n",
+       "1            6         China     1990            27  Age-standardized   \n",
+       "2            6         China     1990            27  Age-standardized   \n",
+       "3            6         China     1990            27  Age-standardized   \n",
+       "4            6         China     1990            27  Age-standardized   \n",
+       "\n",
+       "  haq_index_age_type  indicator_id                indicator_name  \\\n",
+       "0            Overall           100                     HAQ Index   \n",
+       "1            Overall           297                  Tuberculosis   \n",
+       "2            Overall           302            Diarrheal diseases   \n",
+       "3            Overall           322  Lower respiratory infections   \n",
+       "4            Overall           328  Upper respiratory infections   \n",
+       "\n",
+       "                               measure        val      upper      lower  \n",
+       "0                                Index  35.033943  38.778109  31.591303  \n",
+       "1  Mortality-to-incidence ratios (MIR)   0.151080   0.179177   0.126658  \n",
+       "2  Mortality-to-incidence ratios (MIR)   0.000377   0.000491   0.000291  \n",
+       "3  Risk-standardised death rates (RSD)   0.000904   0.001042   0.000768  \n",
+       "4  Risk-standardised death rates (RSD)   0.000019   0.000032   0.000002  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HAQ.head()"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       1995\n",
+       "1       1996\n",
+       "2       1997\n",
+       "3       1998\n",
+       "4       1999\n",
+       "        ... \n",
+       "5395    2015\n",
+       "5396    2016\n",
+       "5397    2017\n",
+       "5398    2018\n",
+       "5399    2019\n",
+       "Name: year, Length: 5400, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HS['year']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "HS.head()\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -61,7 +216,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
   "orig_nbformat": 4
